--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "mdash-node": "^1.0.1",
+    "moment": "^2.24.0",
     "node-spotify-api": "^1.0.7"
   }
 }
